# SDL3_sound

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: SDL3_sound.pc.in
cmake/test/: CMakeLists.txt
examples/: playsound.c  playsound_simple.c
src/: Makefile.os2  SDL_sound.c  SDL_sound.h  SDL_sound_aiff.c  SDL_sound_au.c  SDL_sound_coreaudio.c  SDL_sound_flac.c  SDL_sound_internal.h  SDL_sound_midi.c  SDL_sound_modplug.c  SDL_sound_mp3.c  SDL_sound_raw.c  SDL_sound_shn.c  SDL_sound_skeleton.c  SDL_sound_voc.c  SDL_sound_vorbis.c  SDL_sound_wav.c  dr_flac.h  dr_mp3.h  stb_vorbis.h  version.rc
src/timidity/: common.c  instrum.c  readmidi.c  timidity.c
